# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

- Move bezier.h from include/ to include/bezier/.

## [0.1.0] - 2023-08-08

### Added

- Initial version because of upcoming breaking changes.